added a few things plus more bugs will fix tmwr :(
